feat: SEO optimisation and additionall metadata

--- a/index.html
+++ b/index.html
@@ -3,7 +3,122 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trading Demo</title>
+    <link rel="icon" type="image/svg+xml" href="/icons/icon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" type="image/png" href="/icons/icon-57.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="72x72" href="/icons/icon-72.png">
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#fb923c" />
+    <meta name="title" content="TradeFi - Advanced Cryptocurrency Trading Terminal" />
+    <meta name="description" content="Advanced cryptocurrency trading terminal with real-time market data, portfolio management, and trading tools" />
+    <meta name="keywords" content="cryptocurrency trading, crypto terminal, bitcoin trading, ethereum trading, DeFi, portfolio management, yield farming, trading charts, market data" />
+    <meta property="og:title" content="TradeFi - Advanced Cryptocurrency Trading Terminal" />
+    <meta property="og:description" content="Advanced cryptocurrency trading terminal with real-time market data, portfolio management, and trading tools" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content='/icons/icon-512.png' />
+    <meta property="og:site_name" content="TradeFi" />
+    <meta property="og:locale" content="en_US" />
+    <meta name="twitter:card" content='summary_large_image' />
+    <meta name="twitter:title"  content="TradeFi - Advanced Cryptocurrency Trading Terminal" />
+    <meta name="twitter:description" content="Advanced cryptocurrency trading terminal with real-time market data, portfolio management, and trading tools" />
+    <meta name="twitter:image" content='/icons/icon-512.png' />
+    <meta name="twitter:site" content="@tradefi" />
+    <meta name="twitter:creator" content="@tradefi" />
+    <meta name="author" content="TradeFi" />
+    <meta name="msapplication-TileColor" content="#fb923c" />
+    <meta name="application-name" content="TradeFi" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="TradeFi" />
+    <title>TradeFi</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "What is TradeFi Trading Terminal?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "TradeFi is an advanced cryptocurrency trading terminal that provides real-time market data, professional trading tools, portfolio management, and automated yield optimization through our MegaVault feature. It's designed for both beginner and professional crypto traders."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How do I start trading on TradeFi?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "To start trading on TradeFi: 1) Navigate to the Markets page to view available cryptocurrencies, 2) Click on any crypto to go to the Trading page, 3) Use the advanced TradingView charts for analysis, 4) Place buy or sell orders using our intuitive order interface, 5) Monitor your positions in the Portfolio section."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What cryptocurrencies can I trade on TradeFi?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "TradeFi supports trading of major cryptocurrencies including Bitcoin (BTC), Ethereum (ETH), and many other popular altcoins. You can view the complete list of available trading pairs on our Markets page, which includes real-time prices, 24h changes, market caps, and trading volumes."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Is TradeFi safe and secure?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes, TradeFi implements industry-standard security measures including HTTPS encryption, secure authentication, and follows best practices for cryptocurrency trading platforms. Your personal information and trading data are protected with advanced security protocols."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Can I use TradeFi on mobile devices?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Absolutely! TradeFi is fully responsive and optimized for mobile devices. The interface adapts to different screen sizes, providing an excellent trading experience on smartphones and tablets. All features including charts, trading, and portfolio management are available on mobile."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What trading tools are available?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "TradeFi offers professional trading tools including: real-time TradingView charts with technical indicators, live order books, market depth visualization, price alerts, sparkline charts, real-time price updates, and comprehensive market analysis tools."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How do I get support if I need help?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Support is available through multiple channels: 1) Visit the Settings > Help section for documentation and FAQs, 2) Contact our support team through the help center, 3) Check the notification center for important updates, 4) Access tutorials and guides within the platform."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What makes TradeFi different from other trading platforms?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "TradeFi stands out with its combination of professional-grade trading tools, automated yield optimization (MegaVault), real-time market data, intuitive user interface, mobile optimization, and comprehensive portfolio management. Our platform is designed for both beginners and advanced traders."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How often is market data updated?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Market data on TradeFi is updated in real-time. Prices, charts, order books, and portfolio values refresh continuously to ensure you have the most current information for making trading decisions. The price marquee and sparkline charts update every few seconds."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Can I access my trading history and analytics?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes, your complete trading history and performance analytics are available in the Portfolio and Profile sections. You can view detailed statistics including total P&L, win rate, risk/reward ratios, trading volume, and historical performance charts."
+            }
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
